# 2048-cuda-backend

./: .gitmodules  CMakeLists.txt  README.md  build.sh
include/: Consts.hpp  Game.hpp  MonteCarlo.hpp  ThreadPool.hpp
protobuf/schemas/: game_state.proto
src/: Game.cpp  MonteCarlo.cpp  ThreadPool.cpp  main.cpp
